--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,17 +23,28 @@ body,
 }
 
 header {
+  display: flex;
   padding: 16px;
   border-bottom: 1px solid #fff;
   background: #333;
+  align-items: center;
+}
+
+header svg {
+  margin-right: 16px;
+}
+
+header svg * {
+  fill: #fff;
 }
 
 header h1 {
-  margin: 0 0 16px 0;
+  margin: 0 0 4px 0;
 }
 
 header p {
   margin: 0;
+  color: #ccc;
 }
 
 .content {
