--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,9 +24,15 @@ body,
 
 header {
   display: flex;
+  justify-content: space-between;
   padding: 16px;
   border-bottom: 1px solid #fff;
   background: #333;
+  align-items: center;
+}
+
+header .title {
+  display: flex;
   align-items: center;
 }
 
@@ -218,14 +224,21 @@ ul.labels li div.label .info {
   opacity: 0.5;
 }
 
+.button,
 input::file-selector-button {
   padding: 4px 16px;
-  color: #0F0;
+  color: #fff;
   background: transparent;
-  border: 1px solid #0F0;
+  border: 1px solid #fff;
   border-radius: 4px;
-  font-size: large;
   margin-right: 8px;
+  text-decoration: none;
+}
+
+input::file-selector-button {
+  color: #0F0;
+  border: 1px solid #0F0;
+  font-size: large;
 }
 
 .error button {
