--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -124,8 +124,8 @@ div#upload .file img {
 }
 
 div#results {
-  border-left: 1px solid #333;
-  border-right: 1px solid #333;
+  border: solid #333;
+  border-width: 0 1px;
 }
 
 .scrollable {
@@ -266,4 +266,26 @@ input::file-selector-button {
 .error button {
   color: red;
   border: 1px solid red;
+}
+
+@media screen and (max-width: 768px) {
+  header h1 {
+    font-size: large;
+  }
+
+  header .subtitle {
+    font-size: small;
+  }
+
+  .content {
+    flex-direction: column;
+  }
+
+  div#upload .file img {
+    max-height: 50px;
+  }
+
+  div#results {
+    border-width: 1px 0;
+  }
 }
